--- a/news/pubspec.yaml
+++ b/news/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   google_fonts: ^6.1.0
+  dot_navigation_bar: ^1.0.2
 
 dev_dependencies:
   flutter_test:
