--- a/news/pubspec.yaml
+++ b/news/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   google_fonts: ^6.1.0
   dot_navigation_bar: ^1.0.2
+  responsive_sizer: ^3.2.0
 
 dev_dependencies:
   flutter_test:
