--- a/news/pubspec.yaml
+++ b/news/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.1.0
   dot_navigation_bar: ^1.0.2
   responsive_sizer: ^3.2.0
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
