--- a/news/pubspec.yaml
+++ b/news/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   responsive_sizer: ^3.2.0
   curved_navigation_bar: ^1.0.3
+  dio: ^5.3.3
+  meta: ^1.10.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
